--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - run:
           name: fail on purpose
+          shell: '/bin/bash'
           command: |
             exit 1
           background: true
