--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,15 +53,18 @@ jobs:
     steps:
       - run:
           name: print FOO
-          shell: R -e
+          shell: 'R --interactive'
+          # shell: R -e
+          # NOTE: `R -e "..."` command works though; we can test this when in the SSH session
+          # not sure why this is failing.
           command: |
             Sys.getenv("FOO")
 
 workflows:
   taco-shells:
     jobs:
-      - ruby
-      - python
-      - bash
-      - node
+#       - ruby
+#       - python
+#       - bash
+#       - node
       - rscript
